private-cluster-gcp-mcs/k8s/postgres/network-policy.yaml
# postgres/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
spec:
  podSelector:
    matchLabels:
      app: postgres        # Applies to database pods
      component: database
  policyTypes:
    - Ingress             # Control incoming traffic only
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: hungry-echoes  # Allow traffic only from app pods
      ports:
        - protocol: TCP
          port: 5432      # PostgreSQL port
